[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/titleScreenfix.png" type="Texture" id=1]
[ext_resource path="res://src/levels/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/inactiveButton(lvlSelect).png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/PixelNumbers.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/sprites/activeButton(lvlSelect).png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "title"
length = 1.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.7818, 0 )
texture = ExtResource( 1 )
hframes = 9

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/title = SubResource( 1 )

[node name="TitleScreenButtons" type="Node2D" parent="."]

[node name="StartGame" type="Button" parent="TitleScreenButtons"]
margin_left = -77.0
margin_top = -177.364
margin_right = 77.0
margin_bottom = -124.364
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelect" type="Button" parent="TitleScreenButtons"]
margin_left = -77.0
margin_top = -91.0
margin_right = 77.0
margin_bottom = -38.0
text = "Level Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="TitleScreenButtons"]
margin_left = -77.0
margin_right = 77.0
margin_bottom = 53.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="TitleScreenButtons"]
margin_left = -77.0
margin_top = 100.0
margin_right = 77.0
margin_bottom = 153.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectButtons" type="Node2D" parent="."]
visible = false

[node name="Lvl1" type="TextureButton" parent="LevelSelectButtons"]
margin_left = -200.0
margin_top = -100.0
margin_right = -120.0
margin_bottom = -20.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LevelSelectButtons/Lvl1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_right = 5.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl2" type="TextureButton" parent="LevelSelectButtons"]
margin_left = -40.0
margin_top = -100.0
margin_right = 40.0
margin_bottom = -20.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LevelSelectButtons/Lvl2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_right = 5.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl3" type="TextureButton" parent="LevelSelectButtons"]
margin_left = 120.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = -20.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LevelSelectButtons/Lvl3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_right = 5.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TitleScreenButtons/StartGame" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TitleScreenButtons/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="TitleScreenButtons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="TitleScreenButtons/Quit" to="." method="_on_Quit_pressed"]
